--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/conta"
         android:icon="@drawable/ic_portrait_black_24dp"
-        android:title="Minha Conta" />
+        android:title="Alunos" />
     <item
         android:id="@+id/config"
         android:icon="@drawable/ic_brightness_high_black_24dp"
