--- a/app/src/main/res/layout/layout_da_linha_do_listview.xml
+++ b/app/src/main/res/layout/layout_da_linha_do_listview.xml
@@ -10,8 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:src="@drawable/azul"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textViewNome"
